🐒Initiate todo app

--- a/index.html
+++ b/index.html
@@ -7,58 +7,78 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="app">
-        {{ message }}
-        <p></p>
-        <div v-if="seen">This is a hidden string.</div>
-        <button v-on:click="handle">Click</button>
+<div id="container">
+    <div id="fakebox">
+        <input id="fakeInput" type="text" alt="Add todo here" v-model="fakeInput">
+        <button id="fakeButton" v-on:click="addTodo">Add</button>
     </div>
-
-    <div id="app-1">
-        <span v-bind:title="message">Pause here!</span>
-    </div>
-
-    <div id="app-2">
-        <li v-for="(item, index) in items" :key="index">
-            {{ item.text }}
-        </li>
-    </div>
-
-    <div id="app-3">
-        <input v-model="message" type="text" >
-        {{ message }}
-    </div>
-
-    <div id="app-4">
+    <div id="results">
         <ol>
-            <todo-item v-for="item in todos" :key="item.id" :todo="item">
+            <todo-item v-for=" item in todos" :key="item.id" :todo="item">
+
             </todo-item>
         </ol>
     </div>
+</div>
 
-    <div id="app-5">
-        <li v-for="item in nums">
-            {{ item }}
-        </li>
-        <br>
-        <li v-for="item in midifiedData">
-                {{ item }}
-            </li>
-    </div>
 
-    <div id="axios-example">
-        <p>
-            Ask a yes/no question.
-            <input v-model="question" type="text">
-        </p>
-        <p>
-            {{ answer }}
-        </p>
-    </div>
+    <!--<div id="app">-->
+        <!--{{ message }}-->
+        <!--<p></p>-->
+        <!--<div v-if="seen">This is a hidden string.</div>-->
+        <!--<button v-on:click="handle">Click</button>-->
+    <!--</div>-->
 
+    <!--<div id="app-1">-->
+        <!--<span v-bind:title="message">Pause here!</span>-->
+    <!--</div>-->
+
+    <!--<div id="app-2">-->
+        <!--<li v-for="(item, index) in items" :key="index">-->
+            <!--{{ item.text }}-->
+        <!--</li>-->
+    <!--</div>-->
+
+    <!--<div id="app-3">-->
+        <!--<input v-model="message" type="text" >-->
+        <!--{{ message }}-->
+    <!--</div>-->
+
+    <!--<div id="app-4">-->
+        <!--<ol>-->
+            <!--<todo-item v-for="item in todos" :key="item.id" :todo="item">-->
+            <!--</todo-item>-->
+        <!--</ol>-->
+    <!--</div>-->
+
+    <!--<div id="app-5">-->
+        <!--<li v-for="item in nums">-->
+            <!--{{ item }}-->
+        <!--</li>-->
+        <!--<br>-->
+        <!--<li v-for="item in midifiedData">-->
+                <!--{{ item }}-->
+            <!--</li>-->
+    <!--</div>-->
+
+    <!--<div id="axios-example">-->
+        <!--<p>-->
+            <!--Ask a yes/no question.-->
+            <!--<input v-model="question" type="text">-->
+        <!--</p>-->
+        <!--<p>-->
+            <!--{{ answer }}-->
+        <!--</p>-->
+    <!--</div>-->
+
+    <!--<div id="app-6">-->
+        <!--<input type="text" v-model="message">-->
+        <!--{{ computedMessage }}-->
+    <!--</div>-->
 
     <script src="./index.js"></script>
 </body>
